--- a/style.css
+++ b/style.css
@@ -794,6 +794,14 @@ a {
 /**
  * General Layout
  */
+.col-full .expand-full-width {
+  position: relative;
+  margin-left: -2.625em;
+  margin-right: -2.625em; }
+  .col-full .expand-full-width .col-full {
+    margin-left: auto;
+    margin-right: auto; }
+
 @media screen and (min-width: 768px) {
   .site-header .site-branding, .site-header .site-logo-anchor, .site-header .site-logo-link {
     display: block;
@@ -944,10 +952,18 @@ a {
     margin-left: 2.625em;
     margin-right: 2.625em; } }
 
+@media screen and (min-width: 74.001em) {
+  .col-full .expand-full-width {
+    margin-left: -46em;
+    margin-right: -46em; } }
+
 @media screen and (max-width: 568px) {
   .col-full {
     margin-left: 1.387em;
-    margin-right: 1.387em; } }
+    margin-right: 1.387em; }
+    .col-full .expand-full-width {
+      margin-left: -1.387em;
+      margin-right: -1.387em; } }
 
 /**
  * Forms
